Fix nav extras wrapping on resize.

--- a/style.css
+++ b/style.css
@@ -2362,6 +2362,7 @@ Media Queries
 	}
 
 	.genesis-nav-menu > li {
+		float: left;
 		border-top-width: 0;
 	}
 
